Added the description of the -t option Updated the description of the -i option

--- a/man1/yamdi.1
+++ b/man1/yamdi.1
@@ -2,7 +2,7 @@
 .\" First parameter, NAME, should be all caps
 .\" Second parameter, SECTION, should be 1-8, maybe w/ subsection
 .\" other parameters are allowed: see man(7), man(1)
-.TH YAMDI 1 "May 24, 2008"
+.TH YAMDI 1 "May 20, 2010"
 .\" Please adjust this date whenever revising the manpage.
 .\"
 .\" Some roff macros, for reference:
@@ -19,19 +19,22 @@
 yamdi \- yet another metadata injector (flv)
 .SH SYNOPSIS
 .B yamdi
-\-i input file [\-x xml file | \-o output file [\-x xml file]] [\-c creator] [\-l] [\-h]
+\-i input file [\-x xml file | \-o output file [\-x xml file]] [-t temporary file] [\-c creator] [\-l] [\-h]
 .SH DESCRIPTION
 yamdi stands for Yet Another MetaData Injector and is a metadata injector for FLV files. It adds the onMetaData event to your FLV files.
 .SH OPTIONS
 .TP
 .B \-i
-The source FLV file.
+The source FLV file. If the file name is '-' the input file will be read from stdin. Use the -t option to specify a temporary file.
 .TP
 .B \-o
 The resulting FLV file with the metatags. If the output file is '-' the FLV file will be written to stdout.
 .TP
 .B \-x
 An XML file with the resulting metadata information. If the output file is ommited, only metadata will be generated.
+.TP
+.B \-t
+A temporary file to store the source FLV file in if the input file is read from stdin.
 .TP
 .B \-c
 A string that will be written into the creator tag.
