--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+yamdi-1.7:
+   * [Fix] off-by-one bug while indexing an FLV file
+
 yamdi-1.6:
    * [Fix] Large file support
    * [Fix] VP62 occasional wrong width/height detection [jgreer-zencoder]
