Added -w option to replace the input file with the output file
This option emulates the "inplace" modification of the input file. The
output file acts as temporary file.

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+yamdi-1.8:
+   * [Add] replace input file with output file with -w
+
 yamdi-1.7:
    * [Fix] off-by-one bug while indexing an FLV file
 
