The -a option takes the time between two keyframes

--- a/man1/yamdi.1
+++ b/man1/yamdi.1
@@ -19,7 +19,7 @@
 yamdi \- yet another metadata injector (flv)
 .SH SYNOPSIS
 .B yamdi
-\-i input file [\-x xml file | \-o output file [\-x xml file]] [-t temporary file] [\-c creator] [\-skMXaw] [\-h]
+\-i input file [\-x xml file | \-o output file [\-x xml file]] [-t temporary file] [\-c creator] [\-a interval] [\-skMXw] [\-h]
 .SH DESCRIPTION
 yamdi stands for Yet Another MetaData Injector and is a metadata injector for FLV files. It adds the onMetaData event to your FLV files.
 .SH OPTIONS
@@ -53,7 +53,7 @@ Strip all metadata from the FLV. The -s and -k options will be ignored.
 Omit the keyframes tag in the XML output.
 .TP
 .B \-a
-Add keyframes every 500ms if there is only audio. This option will be ignored if there is a video stream.
+Time in milliseconds between keyframes if there is only audio. This option will be ignored if there is a video stream. No keyframes will be added if this option is omitted.
 .TP
 .B \-w
 Replace the input file with the output file. -i and -o are required to be different files otherwise this option will be ignored.
